Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -203,9 +203,9 @@
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
 \chapter*{Abstract}
 
-GenAI, particularly RAG applications, are revolutionizing the business world. However, their success is not guaranteed and requires systematic evaluation for quality assurance and continuous improvement. Existing frameworks, such as RAGAS or ARES, often focus solely on Information Quality, neglecting other key success factors.
+GenAI, particularly RAG applications, are revolutionizing the business world. However, their success is not guaranteed and requires systematic evaluation for quality assurance and continuous improvement. Existing frameworks, such as RAGAS or ARES, often focus solely on \texti{Information Quality}, neglecting other key success factors.
 
-This bachelor's thesis addresses this gap by conceptualizing and implementing an analytics dashboard for the automatic and holistic measurement of an enterprise RAG application's success. Based on the IS Success Model by DeLone and McLean, a dashboard is integrated into an enterprise RAG system to measure and display metrics for the three central quality dimensions: \textit{Information Quality}, \ textit {System Quality} and \textit{Service Quality}. The dashboard was developed using the DSR methodology in close collaboration with the development team of the RAG software.
+This bachelor's thesis addresses this gap by conceptualizing and implementing an analytics dashboard for the automatic and holistic measurement of an enterprise RAG application's success. Based on the IS Success Model by DeLone and McLean, a dashboard is integrated into an enterprise RAG system to measure and display metrics for the three central quality dimensions: \textit{Information Quality}, \textit{System Quality} and \textit{Service Quality}. The dashboard was developed using the DSR methodology in close collaboration with the development team of the RAG software.
 
 Core features include the AI-supported evaluation of answer and document quality, the visualization of topics in user requests and the analysis of the most important task types.
 
@@ -305,16 +305,16 @@ Following \cite{DeloneMcLean2003ISSuccessTenYearUpdate}, six interrelated factor
     \label{fig:enter-label}
 \end{figure}
 \\
-\textit{System Quality} means the quality of the IS in terms of technical performance \parencite[p.~64]{DeloneMcLean2003ISSuccessTenYearUpdate}. Typical measures for System Quality would be, for example, response time, reliability, ease of use, or hardware utilization \parencite[p.~64--65]{DeloneMcLean1992ISSuccess}.\\
+\textit{System Quality} means the quality of the IS in terms of technical performance \parencite[p.~64]{DeloneMcLean2003ISSuccessTenYearUpdate}. Typical measures for \textit{System Quality} would be, for example, response time, reliability, ease of use, or hardware utilization \parencite[p.~64--65]{DeloneMcLean1992ISSuccess}.\\
 \textit{Information Quality} refers to the quality of the information provided by the IS \parencite[p.~64]{DeloneMcLean1992ISSuccess}. This includes, for example, the usefulness, timeliness, precision, completeness and relevance of the information provided by the system \parencite[p.~67]{DeloneMcLean1992ISSuccess}.\\
 \textit{Service Quality} means the quality of the support that users receive from the IS department or service provider \parencite[p.~18]{DeloneMcLean2003ISSuccessTenYearUpdate}. It became an important success dimension with the rise of end-user computing, where IS providers needed to provide services in addition to making them usable \parencite[p.~18]{DeloneMcLean2003ISSuccessTenYearUpdate}. This dimension is often measured by the support staff's responsiveness, assurance and empathy \parencite[p.~18]{DeloneMcLean2003ISSuccessTenYearUpdate}.
 \\
-These three aspects of the quality of an IS directly influence the \textit{intention to use} and the actual \textit{system use} as well as the \textit{user satisfaction} \parencite[p.~23--24]{DeloneMcLean2003ISSuccessTenYearUpdate}. Here, it is important to differentiate between the two concepts of use. \textit{Intention to use} is an attitudinal measure, representing a user's plan to engage with a system \parencite[p.~23]{DeloneMcLean2003ISSuccessTenYearUpdate}. In contrast, \textit{system use} is a behavioral measure of the actual interaction, captured by metrics like frequency, duration, or the amount of advanced features used \parencite[p.~66]{DeloneMcLean1992ISSuccess}. This distinction is particularly crucial in an enterprise context. For a system where use is voluntary, a user's intention is a strong predictor of their actual use. However, if a system's use is mandatory, simply measuring that it is being used is not very meaningful, because the system has to be used anyway. In that scenario, assessing the nature of the use (e.g., are users leveraging advanced features?) or their underlying intention to use the system properly becomes a more telling indicator of true acceptance and success
-\parencite[p.~66]{DeloneMcLean1992ISSuccess}. Both use and intention are linked with \textit{user satisfaction}. A positive experience during system use leads to higher satisfaction, which in turn reinforces the intention for continued and more extensive use in the future \parencite[p.~23]{DeloneMcLean2003ISSuccessTenYearUpdate}. In an organizational context, this user satisfaction is heavily influenced by the system's perceived impact on job performance, such as an increase in productivity. Therefore, the combination of active system use and high user satisfaction is what generates \textit{Net Benefits} \parencite[p.~23]{DeloneMcLean2003ISSuccessTenYearUpdate}.\\
+These three aspects of the quality of an IS directly influence the \textit{intention to use} and the actual \textit{system use} as well as the \textit{user satisfaction} \parencite[p.~23--24]{DeloneMcLean2003ISSuccessTenYearUpdate}. Here, it is important to differentiate between the two concepts of use. \textit{Intention to use} is an attitudinal measure, representing a user's plan to engage with a system \parencite[p.~23]{DeloneMcLean2003ISSuccessTenYearUpdate}. In contrast, \textit{system use} is a behavioral measure of the actual interaction, captured by metrics like frequency, duration, or the amount of advanced features used \parencite[p.~66]{DeloneMcLean1992ISSuccess}. This distinction is particularly crucial in an enterprise context. For a system where use is voluntary, a user's intention is a strong predictor of their actual use. However, if a system's use is mandatory, simply measuring that it is being used is not very meaningful, because the system has to be used anyway. In that scenario, assessing the nature of the use (e.g., are users leveraging advanced features?) or their underlying \textit{intention to use} the system properly becomes a more telling indicator of true acceptance and success
+\parencite[p.~66]{DeloneMcLean1992ISSuccess}. Both use and intention are linked with \textit{user satisfaction}. A positive experience during system use leads to higher satisfaction, which in turn reinforces the intention for continued and more extensive use in the future \parencite[p.~23]{DeloneMcLean2003ISSuccessTenYearUpdate}. In an organizational context, this \textit{user satisfaction} is heavily influenced by the system's perceived impact on job performance, such as an increase in productivity. Therefore, the combination of active system use and high \textit{user satisfaction} is what generates \textit{Net Benefits} \parencite[p.~23]{DeloneMcLean2003ISSuccessTenYearUpdate}.\\
 This process, however, is not a one-way street. The model includes a crucial feedback loop: the \textit{Net Benefits} that users perceive will in turn influence their future \textit{user satisfaction} and \textit{intention to use} \parencite[p.~23-24]{DeloneMcLean2003ISSuccessTenYearUpdate}. When users see that a system is delivering real value, it reinforces their positive attitude towards the system. This creates a virtuous cycle, where a successful system's value is constantly reinforced and grows over time \parencite[p.~23]{DeloneMcLean2003ISSuccessTenYearUpdate}.\\
 \\
 The TAM and the ISSM address the same fundamental questions but from two different perspectives. The TAM focuses on the individual user, suggesting that a person will use a system more often if it provides value (PU) and is easy to operate (PEU) \parencite[p.~320]{Davis1989}.
-The ISSM, on the other hand, argues from a company's perspective. It concludes that three quality dimensions influence system success: \textit{Information Quality}, \textit{System Quality} and \textit{Service Quality}. These dimensions impact both \textit{user satisfaction} and \textit{ intention to use}, which drives \textit{actual system use} \parencite[pp.~22-23]{DeloneMcLean2003ISSuccessTenYearUpdate}. Overall, the two models appear to be quite similar to each other, as both incorporate factors such as the simplicity of a system and its overall benefit. Therefore, we can conclude that evaluations we take on a small individual scale will be valid on an organizational scale, too.
+The ISSM, on the other hand, argues from a company's perspective. It concludes that three quality dimensions influence system success: \textit{Information Quality}, \textit{System Quality} and \textit{Service Quality}. These dimensions impact both \textit{user satisfaction} and \textit{intention to use}, which drives \textit{actual system use} \parencite[pp.~22-23]{DeloneMcLean2003ISSuccessTenYearUpdate}. Overall, the two models appear to be quite similar to each other, as both incorporate factors such as the simplicity of a system and its overall benefit. Therefore, we can conclude that evaluations we take on a small individual scale will be valid on an organizational scale, too.
 
 For this thesis, the ISSM provides a more practical framework. It offers specific, measurable dimensions rather than the TAM's general concept of \textit{external variables} and argues from a company's perspective. Therefore, we will use the ISSM to develop and categorize the quality measurements for the RAG application.
 \newpage
@@ -330,9 +330,9 @@ of KM success.\\
     \caption{Knowledge management success model by Jennex \& Olfman \parencite[p.~56]{Jennex2006}}
     \label{fig:enter-label}
 \end{figure}
-The \textit{System Quality} dimension extends to contain the \textit{technological resources}, \textit{KM form} and the \textit{KM level} \parencite[p.~56]{Jennex2006}. \textit{Technological resources} define the capability of an organization to develop, operate and maintain KMS \parencite[p.~56]{Jennex2006}. This includes all kinds of technical conditions like the amount of experience available to develop, operate and maintain the KM, the underlying network infrastructure or the databases to hold the data use in KM. The \textit{KM form} refers to the extent to which knowledge and KM processes are computerized and integrated \parencite[p.~56]{Jennex2006}. This is important since computerized KM processes are more effective than analogue ones as they make knowledge accessible everywhere at any time through a simple-to-use interface. The \textit{KM level} in the end refers to the ability to influence current activities \parencite[p.~57]{Jennex2006}. \textit{Technological resources} and the \textit{KM form} are both enablers for the \textit{KM level} and serve as a technical foundation for the ability of the KMS to influence the decision-making process.\\
-The \textit{Knowledge Quality} dimension, that corresponds to the \textit{Information Quality} dimension in the simple ISSM \parencite[~p.~64]{DeloneMcLean2003ISSuccessTenYearUpdate}, consists of three subsidiary factors too - the \textit{KM strategy/process}, the \textit{Richness} of the captured knowledge and the \textit{Linkages} among the knowledge components \parencite[p.~57]{Jennex2006}. The \textit{Knowledge strategy/process} factor is the basis for the two other factors and looks at the organizational processes organizing the KM and to what extent these processes are formalized \parencite[p.~57]{Jennex2006}. \textit{Richness}, on the other hand, evaluates the accuracy and timeliness of the knowledge itself - one could say it is the quality of the actual knowledge \parencite[p.~57]{Jennex2006}. Linkages refer to how accessible the knowledge is through things like knowledge and topic maps, etc. \parencite[p.~57]{Jennex2006}\\
-The \textit{Service Quality} dimension determines if users of the KMS are provided with sufficient support to use the KMS effectively \parencite[p.~58]{Jennex2006}. It consists of three parts as well. The \textit{management support} refers to the provision of adequate resources for the KMS of the organization as well as the creation of a knowledge-sharing organization culture by the organization's management \parencite[p.~58]{Jennex2006}. User KM Service Quality refers to the support provided by the user organization in order to train the users to use the KMS effectively \parencite[p.~58]{Jennex2006}. On the other hand, the IS KM Service Quality refers to the support provided by the IS organization to allow users to use the KMS as well as maintain it \parencite[p.~59]{Jennex2006}. This includes building, setup and maintaining the KMS infrastructure, ensuring availability, reliability and security of the KMS provided.\\\\
+The \textit{System Quality} dimension extends to contain the \textit{Technological Resources}, \textit{KM form} and the \textit{KM level} \parencite[p.~56]{Jennex2006}. \textit{Technological Resources} define the capability of an organization to develop, operate and maintain KMS \parencite[p.~56]{Jennex2006}. This includes all kinds of technical conditions like the amount of experience available to develop, operate and maintain the KM, the underlying network infrastructure or the databases to hold the data use in KM. The \textit{KM form} refers to the extent to which knowledge and KM processes are computerized and integrated \parencite[p.~56]{Jennex2006}. This is important since computerized KM processes are more effective than analogue ones as they make knowledge accessible everywhere at any time through a simple-to-use interface. The \textit{KM level} in the end refers to the ability to influence current activities \parencite[p.~57]{Jennex2006}. \textit{Technological Resources} and the \textit{KM form} are both enablers for the \textit{KM level} and serve as a technical foundation for the ability of the KMS to influence the decision-making process.\\
+The \textit{Knowledge Quality} dimension, that corresponds to the \textit{Information Quality} dimension in the simple ISSM \parencite[~p.~64]{DeloneMcLean2003ISSuccessTenYearUpdate}, consists of three subsidiary factors too - the \textit{KM strategy/process}, the \textit{Richness} of the captured knowledge and the \textit{Linkages} among the knowledge components \parencite[p.~57]{Jennex2006}. The \textit{Knowledge strategy/process} factor is the basis for the two other factors and looks at the organizational processes organizing the KM and to what extent these processes are formalized \parencite[p.~57]{Jennex2006}. \textit{Richness}, on the other hand, evaluates the accuracy and timeliness of the knowledge itself - one could say it is the quality of the actual knowledge \parencite[p.~57]{Jennex2006}. \textit{Linkages} refer to how accessible the knowledge is through things like knowledge and topic maps, etc. \parencite[p.~57]{Jennex2006}\\
+The \textit{Service Quality} dimension determines if users of the KMS are provided with sufficient support to use the KMS effectively \parencite[p.~58]{Jennex2006}. It consists of three parts as well. The \textit{management support} refers to the provision of adequate resources for the KMS of the organization as well as the creation of a knowledge-sharing organization culture by the organization's management \parencite[p.~58]{Jennex2006}. \textit{User KM Service Quality} refers to the support provided by the user organization in order to train the users to use the KMS effectively \parencite[p.~58]{Jennex2006}. On the other hand, the \textit{IS KM Service Quality} refers to the support provided by the IS organization to allow users to use the KMS as well as maintain it \parencite[p.~59]{Jennex2006}. This includes building, setup and maintaining the KMS infrastructure, ensuring availability, reliability and security of the KMS provided.\\\\
 All three dimensions - the \textit{System Quality}, \textit{knowledge quality} and the \textit{Service Quality} influence similar to the original ISSM the \textit{Intention to use} as well as the \textit{User Satisfaction} and cause a \textit{net benefit} in the end \parencite[p.~56]{Jennex2006}. The KMS success model makes a small difference by replacing the actual usage with \textit{perceived benefit} to highlight the importance of the distinction between mandatory and voluntary use \parencite[p.~55]{Jennex2006}.
 \section{GenAI Systems in organizations}
 Since we now know what determines the success of KMS in organizations like enterprises, we are going to have a closer look at the GenAI systems that are used to support KM in an organization, find out what they are used for and which factors define their quality.\\
@@ -342,7 +342,7 @@ The GenAI system we will focus on throughout this thesis is a Retrieval-Augmente
 \subsection{Advantages of RAG systems for organizational KM}
 One problem of LLMs that do not use RAG is that they can only provide the data they were trained on. This causes them to become outdated. As we know from the KMS success model, an organization must be able to access up-to-date information using their KMS. RAG systems can provide this by utilizing up-to-date knowledge sources for their generation \parencite[p.~9459]{Lewis2020}.\\
 Another issue with LLMs is that they tend to hallucinate if they don't know the answer to a user's query or apply a pattern from the training data incorrectly. Since RAG systems bind the LLMs they use to the information provided by the retrieval algorithms, they reduce hallucinations, allowing a user to verify the answer provided by the LLM by double-checking the sources used by the RAG system \parencite[p.~9469]{Lewis2020}. This way, the RAG approach improves the accuracy of LLMs.\\
-Since RAG systems can query various data sources at once \parencite{GoogleCloudRAG}, they provide good Linkages to other KMS as well. Following the KMS and ISSM, RAG systems appear to be a suitable choice for organizational KM.
+Since RAG systems can query various data sources at once \parencite{GoogleCloudRAG}, they provide good \textit{Linkages} to other KMS as well. Following the KMS and ISSM, RAG systems appear to be a suitable choice for organizational KM.
 \subsection{Challenges for RAG systems in organizations}
 However, realizing the full potential of RAG systems in an enterprise context requires significant effort. Enterprises typically have high requirements concerning not only the output quality but also compliance regulations, the integration of various data sources and other factors. In the following analysis, we will examine some of the issues encountered in RAG systems used in enterprises and assign them to the quality dimensions of the ISSM. \\
 A formal taxonomy of failure points for a RAG system, created based on three case studies, highlights seven distinct issue types related to \textit{Information Quality} \parencite[p.~91]{Barnett2024}. These challenges range from fundamental data gaps, where the required information is simply missing from the knowledge base, to retrieval failures where required documents are not ranked highly enough by the retrieval algorithm or are lost during context consolidation. Further down the pipeline, the LLM might fail to extract the correct answer from the provided context. Finally, even if factually correct, the generated answer may have the wrong format, an incorrect level of specificity, or be incomplete, failing to fully satisfy the user's query.\\
@@ -424,13 +424,13 @@ The system provides a range of interactive features to enhance the user experien
 This chapter presents the results of the developer workshops, including the resulting concepts and their relationship to the IS \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} and KMS success \parencite{Jennex2006} frameworks, as well as the prioritization and feedback provided by the developer team. Each concept is explained in terms of the quality dimensions that it covers. While many concepts allow Use Case administrators to improve the system across multiple quality dimensions, they are assigned to the dimension for which they are most suitable.
 \subsection{Mostly System Quality related concepts}
 \subsubsection{Response Time Measurement}
-The first concept for determining the System Quality of the RAG application is the measurement of its response time, defined as the duration from the submission of a user's query to the delivery of the complete answer. For a comprehensive analysis, this measurement should incorporate not only the raw duration but also key system factors to assess their impact. These factors include the specific language model (LLM) being used and whether features such as Query Splitting or Query Reformulation were activated for the request. Using this feature, Use Case administrators can identify performance trends and retrospectively evaluate the impact of their own decisions on the response times of the RAG system. Furthermore, it enables them to better assess how various system factors affect the response time. These insights can, in turn, be used to train employees on the effective use of the system, for example, by providing better guidance on the performance implications of choosing a particular language model. By evaluating the response time of the system, Use Case administrators can draw conclusions on the performance of the system and whether the \textit{technological resources} provided are suitable for the system, which is a key aspect of \textit{System Quality} \parencite[p.~56--57]{Jennex2006}.
+The first concept for determining the \texti{System Quality} of the RAG application is the measurement of its response time, defined as the duration from the submission of a user's query to the delivery of the complete answer. For a comprehensive analysis, this measurement should incorporate not only the raw duration but also key system factors to assess their impact. These factors include the specific language model (LLM) being used and whether features such as Query Splitting or Query Reformulation were activated for the request. Using this feature, Use Case administrators can identify performance trends and retrospectively evaluate the impact of their own decisions on the response times of the RAG system. Furthermore, it enables them to better assess how various system factors affect the response time. These insights can, in turn, be used to train employees on the effective use of the system, for example, by providing better guidance on the performance implications of choosing a particular language model. By evaluating the response time of the system, Use Case administrators can draw conclusions on the performance of the system and whether the \textit{Technological Resources} provided are suitable for the system, which is a key aspect of \textit{System Quality} \parencite[p.~56--57]{Jennex2006}.
 
 For the visualization of this data, a time-series diagram is proposed. The x-axis would represent the time and the y-axis the measured response time. To improve readability and highlight long-term developments, the chart should be smoothed, for instance, by displaying daily averages. The interface should also include interactive filters that allow for the inclusion of the different system factors. These filters would enable users to display data subsets, such as showing only the response times associated with a specific LLM or with Query Splitting enabled/disabled.
 
 During the workshop, the development team assigned a \textbf{medium priority} to this feature (see Tables \ref{tab:system_quality}, \ref{tab:system_quality_g2} in the appendix). In their feedback, they noted that while the feature would be straightforward to implement, they suspected that overall response times would not vary significantly. Therefore, they hypothesized that this analysis would likely not yield major conclusions.
 \subsubsection{Error Rate Monitoring}
-A second concept proposed to evaluate System Quality focuses on monitoring error rates to assess system stability and reliability. The core metrics to be captured are the absolute count and the percentage of user queries that result in a system error. For a more granular analysis, these error metrics can be combined with the system factors (LLM selection and the activation state of Query Splitting and Reformulation) and with the different predefined error types and messages of the system. By analyzing the error rates of the system, Use Case administrators can conclude the overall reliability of the system, which is yet another critical \textit{System Quality metric} \parencite[p.~64]{DeloneMcLean1992ISSuccess}. By providing the development and operations team of the RAG application with insights into frequent errors, this feature partly contributes to the \textit{IS KM Service Quality} \parencite[pp.~58--59]{Jennex2006} of the RAG system, as well, since service processes carried out by the RAG system's vendor, such as bug fixes, are enhanced.
+A second concept proposed to evaluate \textit{System Quality} focuses on monitoring error rates to assess system stability and reliability. The core metrics to be captured are the absolute count and the percentage of user queries that result in a system error. For a more granular analysis, these error metrics can be combined with the system factors (LLM selection and the activation state of Query Splitting and Reformulation) and with the different predefined error types and messages of the system. By analyzing the error rates of the system, Use Case administrators can conclude the overall reliability of the system, which is yet another critical \textit{System Quality metric} \parencite[p.~64]{DeloneMcLean1992ISSuccess}. By providing the development and operations team of the RAG application with insights into frequent errors, this feature partly contributes to the \textit{IS KM Service Quality} \parencite[pp.~58--59]{Jennex2006} of the RAG system, as well, since service processes carried out by the RAG system's vendor, such as bug fixes, are enhanced.
 
 The visualization proposed for these data is again a time-series diagram. The x-axis would represent time, while the y-axis would display the amount or percentage of system errors. The interface is designed to be interactive, featuring filtering options for both system factors and error types. This allows for detailed analysis, such as comparing the error rates of different language models or analyzing the impact of query splitting and query reformulation on error rates.
 
@@ -486,7 +486,7 @@ For this analysis, a new visualization method was suggested: a heatmap. In this 
 The team agreed that this analysis could provide "good insights" into user behavior and assigned a \textbf{medium to high priority} (see Tables \ref{tab:info_quality_g2_p1}, \ref{tab:info_quality_g2_p2} in the appendix). Understanding which tasks are most common for high-interest topics could help administrators better structure content or create more relevant "Quick Actions" to improve the user experience for those specific topics.
 \subsection{Mostly Service Quality related concepts}
 \subsubsection{User Interactivity Tracking}
-To evaluate the Service Quality \parencite[p.~18]{DeloneMcLean2003ISSuccessTenYearUpdate} of the application, a concept for tracking user interactivity was discussed. The idea is to monitor and count a wide range of specific user events that happen during a session. This approach tries to make the whole user interaction interpretable and therefore includes analyzing interactions like copying an answer, viewing a source document, or providing direct feedback. This enables Use Case admins to understand how their users use the system and, by this, improves their ability to support their users, which means that the \textit{User KM Service Quality} \parencite[pp.~58--59]{Jennex2006} is improved. Furthermore, since the use of the RAG system is voluntary, we can associate the \textit{actual use} of the system and its functionalities with the \textit{intention to use}, which is a strong indicator for \textbf{Net Benefits} and IS success overall \parencite[pp.~23--24]{DeloneMcLean2003ISSuccessTenYearUpdate}.
+To evaluate the \textit{Service Quality} \parencite[p.~18]{DeloneMcLean2003ISSuccessTenYearUpdate} of the application, a concept for tracking user interactivity was discussed. The idea is to monitor and count a wide range of specific user events that happen during a session. This approach tries to make the whole user interaction interpretable and therefore includes analyzing interactions like copying an answer, viewing a source document, or providing direct feedback. This enables Use Case admins to understand how their users use the system and, by this, improves their ability to support their users, which means that the \textit{User KM Service Quality} \parencite[pp.~58--59]{Jennex2006} is improved. Furthermore, since the use of the RAG system is voluntary, we can associate the \textit{actual use} of the system and its functionalities with the \textit{intention to use}, which is a strong indicator for \textbf{Net Benefits} and IS success overall \parencite[pp.~23--24]{DeloneMcLean2003ISSuccessTenYearUpdate}.
 
 The data would be visualized in a time-series diagram, showing the frequency of these different events over a selected period. A key aspect of this concept is to also provide the use case admins with context or an interpretation of what each measurement for the different interaction types could mean. For example, a high number of users opening source documents might indicate they are actively verifying the system's answers, while frequent follow-up questions could suggest that the initial answers lacked sufficient detail.
 
@@ -503,7 +503,7 @@ A specific challenge that arose from tracking user interactivity was how to corr
 
 The recommendation from the workshop was to adopt a pragmatic hybrid strategy (see section \ref{section:recommendation-follow-ups} in the appendix). The consensus was to start with the "simple distinction" method first, as it is easy to implement and has no operational cost. If this heuristic proves insufficient for reliably separating the two question types, the team could then explore using an AI judge as a second step. This approach was favored due to concerns that the AI judge would be expensive to run and might not guarantee reliable results.
 \subsubsection{Knowledge Gap Detection}
-The last concept proposed for measuring Service Quality \parencite[p.~18]{DeloneMcLean2003ISSuccessTenYearUpdate} is "Knowledge Gap Detection," which aims to identify areas where the system or the users may lack adequate knowledge. The goal is to highlight two distinct types of knowledge gaps:
+The last concept proposed for measuring \textit{Service Quality} \parencite[p.~18]{DeloneMcLean2003ISSuccessTenYearUpdate} is "Knowledge Gap Detection," which aims to identify areas where the system or the users may lack adequate knowledge. The goal is to highlight two distinct types of knowledge gaps:
 
 \be,gin{enumerate}
     \item \textbf{Knowledge gap within the system:} This occurs when the topic of a user's question aligns with the topic of a relevant knowledge asset, but the system fails at retrieving relevant documents. This suggests an internal deficiency in the system's ability to retrieve the correct information, despite the knowledge theoretically existing within its accessible sources. This could be due to issues with indexing, retrieval algorithms, or the structuring of the knowledge assets themselves. In this case Use Case admins can improve the \textit{Richness} and \textit{Information Quality} \parencite[pp.~57--58]{Jennex2006} of the RAG system by improving the RAG pipeline itself or the underlying data.
@@ -706,7 +706,7 @@ Despite the limitations, this thesis offers significant implications for both pr
 \end{enumerate}
 The cost analysis further showed that the financial impact of such an analytics suite is manageable, adding approximately 20\% to the LLM-related costs, which is a justifiable expense for the insights gained.
 
-\paragraph{Theoretical Implications} This work contributes to the academic discourse by demonstrating an operationalization of the ISSM \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} in the new context of enterprise RAG systems. It shows how the abstract dimensions of the model can be translated into specific, measurable metrics (e.g., "Faithfulness" as a metric for Information Quality). By employing the DSR methodology \parencite{Peffers2007}, a well-structured framework has been used to create new artifacts reliably. Furthermore, this work adopts a new perspective on evaluating RAG applications shaped by the ISSM \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}, which has not been used in prior research. Rather than focusing only on RAG quality, a more holistic perspective is taken -- based on the three quality dimensions of the ISSM \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} -- which in turn guides the development of a dashboard that allows Use Case administrators to perform comprehensive analyses.
+\paragraph{Theoretical Implications} This work contributes to the academic discourse by demonstrating an operationalization of the ISSM \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} in the new context of enterprise RAG systems. It shows how the abstract dimensions of the model can be translated into specific, measurable metrics (e.g., "Faithfulness" as a metric for \textit{Information Quality}). By employing the DSR methodology \parencite{Peffers2007}, a well-structured framework has been used to create new artifacts reliably. Furthermore, this work adopts a new perspective on evaluating RAG applications shaped by the ISSM \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}, which has not been used in prior research. Rather than focusing only on RAG quality, a more holistic perspective is taken -- based on the three quality dimensions of the ISSM \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} -- which in turn guides the development of a dashboard that allows Use Case administrators to perform comprehensive analyses.
 \section{Outlook and Future Research}
 This thesis provides a solid foundation and opens up several paths for future research and development.
 
