Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -147,12 +147,14 @@
 }
 
 @article{Jennex2006WhatIsKM,
-  author  = {Jennex, M. E.},
-  year    = {2006},
-  title   = {What is knowledge management?},
-  journal = {International Journal of Knowledge Management},
-  volume  = {2},
-  number  = {1}
+    author  = {Jennex, M. E.},
+    year    = {2006},
+    title   = {What is knowledge management?},
+    journal = {International Journal of Knowledge Management},
+    pages = {1--4},
+    volume = {1},
+    isbn = {9781599042633},
+    doi = {10.4018/978-1-59904-261-9.ch001}
 }
 
 @article{Alavi2001,
@@ -170,7 +172,7 @@
 @online{Dennis2025,
   author    = {Dennis, M. A.},
   year      = {2025},
-  title     = {Marvin {Minsky}},
+  title     = {{Marvin Minsky}},
   publisher = {Encyclopedia Britannica},
   urldate   = {2025-08-01},
   url       = {https://www.britannica.com/biography/Marvin-Minsky}
@@ -179,7 +181,7 @@
 @misc{Minsky1966,
   author = {Minsky, M.},
   year   = {1966},
-  title  = {Title of Original Work if Known}
+  title  = {Quote for the definition of AI}
 }
 
 @article{Lund2023,
